[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/minigames/tumbler_minigame.gd" id="1"]

[node name="TumblerMinigame" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
horizontal_alignment = 1
text = "[ CLICK when the needle is in the GREEN zone ]"

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 28.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
horizontal_alignment = 1
text = "TUMBLERS: 0 / 3"

[node name="BarBG" type="ColorRect" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.4
anchor_bottom = 0.7
grow_horizontal = 2
color = Color(0.08, 0.08, 0.08, 1)

[node name="SweetSpot" type="ColorRect" parent="BarBG"]
layout_mode = 0
offset_left = 100.0
offset_top = 0.0
offset_right = 180.0
offset_bottom = 600.0
color = Color(0, 0.5, 0, 0.6)

[node name="Needle" type="ColorRect" parent="BarBG"]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 4.0
offset_bottom = 600.0
color = Color(1, 1, 1, 1)
